commit d8bac63b874bc95a6d3900f269b0f86d65c7caaa
Author: abr4xas <me@abr4xas.org>
Date:   Fri Jan 16 14:47:14 2015 -0430

    removiendo "pagination an flip ahead browsing"

commit c6fb1d56a3aef998cc6cd8b8a73a63330cdd4168
Author: abr4xas <me@abr4xas.org>
Date:   Fri Jan 16 14:43:27 2015 -0430

    Removiendo "pagination an flip ahead browsing"

commit 40a2076871619960324eb1cce75ef36916684fef
Author: abr4xas <me@abr4xas.org>
Date:   Fri Jan 16 14:38:28 2015 -0430

    pagination an flip ahead browsing

commit d27ce061e95dca82549cf17d169d048b5eeadae3
Author: abr4xas <me@abr4xas.org>
Date:   Fri Jan 16 14:30:31 2015 -0430

    Agregando cambios en meta tags

commit d13a08c9d20d53c2e3cf4025d8cf75d4c536c73e
Author: abr4xas <me@abr4xas.org>
Date:   Fri Jan 16 13:33:18 2015 -0430

    Cambios menores

commit 89d0e0473cf9a805ff6eaacc52c8cf6f6c753731
Author: abr4xas <me@abr4xas.org>
Date:   Fri Jan 16 13:20:04 2015 -0430

    Cambios minimos en la plantilla

commit d1a12fd4d1efaf5fd8a02177ca927bb45bfdf2ff
Author: abr4xas <me@abr4xas.org>
Date:   Fri Jan 16 11:10:05 2015 -0430

    Agregando cambios en la plantilla y se agrega pagina de error 404 personalizada

commit 534c62b796c06c120dfca728d0d189b33110772c
Author: abr4xas <me@abr4xas.org>
Date:   Fri Jan 16 01:30:29 2015 -0430

    Agregando cambios minimos en la plantilla

commit 7a8c2221d73e82b0c587502f6a01b01b55e67589
Author: abr4xas <me@abr4xas.org>
Date:   Fri Jan 16 01:26:11 2015 -0430

    Agregando versiones minificadas del CSS

commit 719924b5cab1dda373c852af2c205bb00fe132b1
Author: abr4xas <me@abr4xas.org>
Date:   Fri Jan 16 01:11:48 2015 -0430

    Actualizando estilos

commit 92db5420242d9beec49de90c9f6409aa2031211e
Author: abr4xas <me@abr4xas.org>
Date:   Fri Jan 16 01:09:57 2015 -0430

    Actualizando estilos

commit 9a4f0a71d73279cc15951fce93c666d12d4e08c6
Author: abr4xas <me@abr4xas.org>
Date:   Fri Jan 16 00:56:49 2015 -0430
