@@ -190,7 +190,7 @@
                 <a itemprop="url" href="http://creativecommons.org/licenses/by-nc-sa/4.0/" class="tooltip" data-tooltip="CC BY-NC-SA" target="_blank">
                     CC Attribution-NonCommercial-ShareAlike 4.0 International License</a>.<br />
                 <a href="http://planeta.vaslibre.org.ve" class="tooltip" data-tooltip="Planeta VaSlibre" title="Planeta VaSlibre" target="_blank">
-                    <img src="images/planeta_vaslibre_80x15.png" class="vaslibre" alt="Planeta Vaslibre RSS"/>
+                    <img src="images/planeta_vaslibre_80x15.png" width="80";height="15"; alt="Planeta Vaslibre RSS"/>
                 </a> 
             </section>
             <section>
